# scoracle-data

./: .dockerignore  .env  .env.example  .env.local  .gitignore  AGENTS.md  API_KEYS.md  ARCHITECTURE-API.md  CLAUDE.md  ENDPOINTS.md  FRONTEND_INTEGRATION.md  NEON_MIGRATION_PLAN.md  Procfile  README.md  RESTRUCTURE_SUMMARY.md  TENSORFLOW_ML_PLAN.md  docker-compose.yml  go.mod  pyproject.toml  railway.toml  requirements.txt  run_migration.py  schema.sql  start_api.sh
.claude/: settings.local.json
docs/: BOOTSTRAP_FRONTEND.md  INTELLIGENT_SEEDING_PLAN.md  ML_IMPLEMENTATION_STATUS.md  NEW_DATABASE_GUIDELINES.md  STATS_API.md  docs.go  swagger.json  swagger.yaml
exports/: football_entities.json  nba_entities.json  nfl_entities.json
go/: Dockerfile  Makefile  go.mod  go.sum  railway.toml
migrations/: 001_initial_schema.sql
planning_docs/: ARCHITECTURE-API.md  CRON_SEEDING_STRATEGY.md  DROP_POSTGREST_CONSOLIDATE_GO.md  GO_MIGRATION_GUIDE.md  INTELLIGENT_SEEDING_PLAN.md  INTEL_API_PLAN.md  LANGUAGE_EVALUATION.md  MIGRATE_TO_SCORACLE_BACKEND.md  ML_IMPLEMENTATION_STATUS.md  NEON_MIGRATION_PLAN.md  NOTIFICATIONS_AND_FIXTURES.md  PLAYER_TEAM_LOGO_FALLBACK_AND_VIBE_SCORE_UI.md  SEEDING_CONTAINER_SEPARATION.md  SELF_HOSTING_OPS.md  SPORT_SCHEMA_SEPARATION.md  TYPOGRAPHY_SYSTEM.md
postgrest/: Dockerfile  entrypoint.sh  passwd  railway.toml
progress_docs/: 2026-02-23_docker-containerization.md  2026-02-24_repo-reorganization.md  2026-03-13_fix-postgrest-db-url-resolution.md  2026-03-13_multi-sport-schema-architecture-plan.md  2026-03-13_simplify-postgrest-railway-config.md  2026-03-14_sport-schema-separation.md  2026-03-15_cors-accept-profile-header.md  2026-03-15_seeding-container-separation.md  2026-03-16_consolidate-postgrest-endpoints.md  2026-03-21_remove-legacy-endpoints-fix-cors.md  2026-03-22_consolidate-go-remove-postgrest.md  2026-03-24_autofill-database-endpoint.md  2026-03-28_combined-endpoint-architecture-reconciliation.md  2026-03-28_event-box-score-ingestion-plan.md  2026-03-28_legacy-endpoint-clean-break.md  2026-03-28_worktree-cleanup-and-push.md  2026-03-29_railway-postgres-migration-complete.md  2026-04-09_typography-system.md  2026-04-11_nfl-seed-and-aggregator-expansion.md  2026-04-12_exclude-zero-minute-events.md  2026-04-12_football-event-seeding-complete.md  2026-04-12_fuzzy-news-matching-aliases.md  2026-04-14_search-diacritics-and-football-cities.md  2026-04-15_twitter-lazy-cache.md  2026-04-18_api-sports-image-metadata-seeder.md  2026-04-19_expose-all-box-score-datapoints.md  2026-04-20_self-hosted-vibe-pipeline-and-cf-tunnel.md  2026-04-21_python-owns-provider-knowledge.md  2026-04-22_vibe-score-pivot.md  2026-04-24_nightly-vibe-batch-cron-fix.md  2026-04-24_team-full-names-and-logo-transfer.md  2026-04-24_vibe-no-corpus-skip.md  2026-04-25_meta-payload-and-statless-purge.md  2026-04-26_cors-allowlist-solidstart-dev.md  2026-04-27_origin-less-cors-and-smoke.md  2026-05-02_vibe-corpus-mode.md  2026-05-03_vibe-quality-pass.md  (+2 more)
seed/: .dockerignore  BOX_SCORE_ENDPOINTS.md  Dockerfile  META_ENDPOINTS.md  SEEDING_INSTRUCTIONS.md  pyproject.toml  railway.toml
seed/scoracle_seed/: __init__.py  bdl_client.py  bdl_nba.py  bdl_nfl.py  cli.py  config.py  db.py  fixtures.py  models.py  seed_football.py  seed_nba.py  seed_nfl.py  sportmonks_client.py  sportmonks_football.py  upsert.py
seed/scoracle_seed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
seed/services/event/: __init__.py  cli.py  fixtures.py  seed_football.py
seed/services/event/handlers/: __init__.py  bdl_nba.py  bdl_nfl.py  sportmonks_football.py
seed/services/meta/: __init__.py  cli.py
seed/services/meta/handlers/: apisports_images.py
seed/services/news/: cli.py
seed/shared/: __init__.py  aliases.py  apisports_client.py  bdl_client.py  config.py  db.py  http_retry.py  models.py  sportmonks_client.py  stat_keys.py  upsert.py
seed/tests/: test_models.py
(+313 files in other folders)
