# Package configuration for scoracle-data
# Install with: pip install -e .

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoracle-data"
version = "0.1.0"
description = "Sports statistics database and seeding service for Scoracle"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Alba Pepper" }
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# API serving functionality
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "msgspec>=0.18.0",
]

# Redis caching (optional, falls back to in-memory)
redis = [
    "redis>=5.0.0",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.25.0",
]
# All optional dependencies
all = [
    "scoracle-data[api,redis]",
]

[project.scripts]
# CLI entry point (after extraction)
scoracle-data = "scoracle_data.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["python/scoracle_data"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]

