[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scoracle-seed"
version = "0.1.0"
description = "Thin data seeder for Scoracle — calls provider APIs, upserts raw data into Postgres"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary,pool]>=3.2",
    "click>=8.1",
]

[project.scripts]
scoracle-seed = "scoracle_seed.cli:cli"

[tool.setuptools.packages.find]
where = [".", "services", "shared"]
